syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated";

// import common definitions like ResponseStatus
import "common.proto";

service EnvoyWriterService {
  rpc GetLoadableStudy(LoadableStudyJson) returns (WriterReply) {
  }

}
message LoadableStudyJson {
  string loadableStudy = 1;
  string imoNumber = 2;
  int64 vesselId = 3;
  string clientId = 4;
  string messageType = 5;
}
message WriterReply {
  ResponseStatus responseStatus = 1;
  string uuid = 2;
  string messageId = 3;
}